--- a/CSS/styles/abstracts/_global.scss
+++ b/CSS/styles/abstracts/_global.scss
@@ -1,6 +1,7 @@
 @use "variables" as *;
 @use "mixins" as *;
 
+html,* { cursor: none; }
 body{
     background-color: #0e0e0e;
     color: #f5f5f5;
@@ -143,7 +144,6 @@ p { color: #a7a7a7; }
         .close{
             @include position($t: 15px, $r: 20px);
             color: $mainColor;
-            cursor: pointer;
         }
         .row{
             .part1{
@@ -211,7 +211,6 @@ p { color: #a7a7a7; }
                         justify-content: center;
                         align-items: center;
                         transition-duration: .3s;
-                        cursor: pointer;
                         &.remove{
                             background-color: $mainColor;
                             color: rgba(0,0,0,0.6);
@@ -273,7 +272,6 @@ p { color: #a7a7a7; }
                     justify-content: center;
                     align-items: center;
                     transition-duration: .3s;
-                    cursor: pointer;
                     @include respond(350){
                         font-size: 14px;
                         width: 28px;
@@ -404,6 +402,9 @@ p { color: #a7a7a7; }
     background-color: $mainColor !important;
     box-shadow: $mainShadow;
     z-index: 1000;
+}
+#magicPointer a{
+    background-color: #000 !important;
 }
 #magicMouseCursor{
     border: 2px solid $mainColor !important;
